@@ -170,10 +170,13 @@ Revision history for Perl extension ClearCase::Wrapper::MGi.
 	- lsgen: fix for vob root; -a implicit with -d;
 	  print offsprings in addition to siblings
 	- avoid lsvtree when possible (lsgen -all, ci, diff, des)
-	- ci -revert: this doesn't need genealogy--only the physical parent.
+	- ci -revert: this doesn't need genealogy--only the physical parent
 	- mkview -clone: fix to the storage paths, to clone other users' views
 
 0.28 Sat Aug 13 10:51:53 BST 2011
-        - mklbtype -arc: add the comment before locking the archive type.
+        - mklbtype -arc: add the comment before locking the archive type
 	- mklabel -over: faster fail if no type given
 	- mklbtype -arc: unlock if necessary
+	- mklbtype -arc: creates a global hidden type and copies it as needed
+	- cptype: copy and link the Rm attribute type if needed
+	- mklbtype -fam: fix to linking eqinc, as reviving a global archived lbtype
